<resources>
    <string name="app_name">lab2</string>
    <string-array name="colors">
        <item>white</item>
        <item>green</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_cars">ActivityListCars</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="car_brand">Car brand</string>
    <string name="car_model">Car model</string>
    <string name="car_price">Car price</string>
    <string name="zero_hund">0 - 100000 km</string>
    <string name="hund_two_hund">100000 - 200000 km</string>
    <string name="two_hund_plus">200000+ km</string>
    <string name="car_cond">Car condition</string>
    <string name="add_eqt">Additional equipment</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="abs">ABS</string>
    <string name="leather">Leather upholstery</string>
    <string name="phone">PH</string>
    <string name="tel">Tel</string>
    <string name="back">Back</string>
    <string name="modify">Modify</string>
    <string name="go_to_modify">Go modify</string>
    <string name="text_size">Text size</string>
    <string name="text_preview">Text preview</string>
    <string name="color_preview">Color preview</string>
    <string name="activity_settings_name">Settings</string>
    <string name="activity_main_name">Main</string>
    <string name="activity_list_name">List cars</string>
    <string name="activity_detail_name">View only car</string>
    <string name="activity_modify_name">Modify car</string>
    <string name="activity_add_name">Add car</string>
</resources>